# nexus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: main.rs
crates/nexus-codegen/: Cargo.toml
crates/nexus-codegen/src/: error.rs  grpc_server_runtime.rs  header.rs  http_server_runtime.rs  impl_grpc.rs  impl_grpc_server.rs  impl_http.rs  impl_http_server.rs  impl_iceoryx.rs  impl_unix_socket.rs  lib.rs  nix.rs  typescript.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: config.rs  error.rs  lib.rs  network.rs  nxs.pest  schema.rs  types.rs
crates/nexus-core/tests/: integration.rs
crates/nexus-studio/: Cargo.toml
crates/nexus-studio/spa/: index.html
crates/nexus-studio/src/: lib.rs
crates/nexus-validate/: Cargo.toml
crates/nexus-validate/src/: error.rs  lib.rs  rules.rs
crates/nexus-validate/tests/: integration.rs
examples/minimal/: network.toml
examples/mixed/: network.toml
examples/mixed/schemas/: sensor_reading.nxs  summary.nxs
examples/sample/: network.toml
examples/sample/schemas/: game_info.nxs
tests/: e2e.rs
