[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus-gen"
path = "src/main.rs"

[dependencies]
nexus-core = { workspace = true }
nexus-validate = { workspace = true }
nexus-codegen = { workspace = true }
nexus-studio = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
