[package]
name = "nexus-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
